--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "cookie-parser": "^1.4.4",
     "express": "^4.16.4",
     "helmet": "^3.16.0",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "pug": "^2.0.3",
+    "webpack": "^4.30.0",
+    "webpack-cli": "^3.3.1"
   },
   "scripts": {
-    "start": "nodemon --exec babel-node init.js --delay 2"
+    "start": "nodemon --exec babel-node init.js --delay 2",
+    "dev:assets": "webpack"
   },
   "devDependencies": {
     "nodemon": "^1.18.11"
