--- a/package.json
+++ b/package.json
@@ -9,20 +9,36 @@
     "@babel/core": "^7.4.4",
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.4.4",
+    "autoprefixer": "^9.5.1",
+    "babel-loader": "^8.0.5",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
+    "css-loader": "^2.1.1",
+    "dotenv": "^8.0.0",
+    "eslint-config-prettier": "^4.2.0",
     "express": "^4.16.4",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "helmet": "^3.16.0",
+    "mongoose": "^5.5.5",
     "morgan": "^1.9.1",
+    "multer": "^1.4.1",
+    "node-sass": "^4.12.0",
+    "postcss-loader": "^3.0.0",
+    "prettier": "^1.17.0",
     "pug": "^2.0.3",
+    "sass-loader": "^7.1.0",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.1"
   },
   "scripts": {
-    "start": "nodemon --exec babel-node init.js --delay 2",
-    "dev:assets": "webpack"
+    "dev:server": "nodemon --exec babel-node init.js --delay 2 --ignore 'scss'",
+    "dev:assets": "webpack --mode development -w",
+    "build:assets": "webpack --mode production"
   },
   "devDependencies": {
+    "eslint": "^5.16.0",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-prettier": "^3.0.1",
     "nodemon": "^1.18.11"
   }
 }
